# ZygiskNext

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: telegram_url.py
.github/workflows/: ci.yml  issue_moderator.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
loader/: build.gradle.kts
loader/src/: Android.mk  Application.mk  CMakeLists.txt
loader/src/common/: daemon.cpp  dl.cpp  elf_util.cpp  logging.cpp  misc.cpp  socket_utils.cpp
loader/src/include/: api.hpp  daemon.h  dl.h  elf_util.h  logging.h  memory.hpp  native_bridge_callbacks.h  socket_utils.h  solist.hpp
loader/src/injector/: art_method.hpp  entry.cpp  files.cpp  files.hpp  gen_jni_hooks.py  hide.cpp  hook.cpp  injector.cpp  jni_helper.hpp  jni_hooks.hpp  memory.cpp  memory.hpp  misc.cpp  misc.hpp  module.hpp  unmount.cpp  zygisk.hpp
loader/src/loader/: loader.cpp
loader/src/ptracer/: main.cpp  main.hpp  monitor.cpp  ptracer.cpp  utils.cpp  utils.hpp
module/: .gitignore  build.gradle.kts
module/src/: customize.sh  daemon.sh  mazoku  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  verify.sh  zygisk-ctl.sh
zygiskd/: Cargo.toml  build.gradle.kts
zygiskd/.cargo/: config.toml
zygiskd/src/: companion.rs  constants.rs  dl.rs  fuse.rs  magic.rs  main.rs  ptrace.rs  utils.rs  watchdog.rs  zygisk.rs  zygiskd.rs
zygiskd/src/root_impl/: apatch.rs  kernelsu.rs  kpatch.rs  magisk.rs  mod.rs
